# Proyecto_Compiladores2_ValeriaAlfaro

./: .gitignore  Ast.tc  CMakeLists.txt  CodeGen.cpp  CodeGen.hpp  LLVMSources.txt  Lexer.l  Parser.y  README.md  main.cpp  practice.txt  result.ll
cmake/: FindTreeCC.cmake
